[package]
name = "ds-srv"
version = "0.6.0"
authors = ["Alexandre Lissy <lissyx@lissyx.dyndns.org>"]

[features]
default = []
dump_debug_stream = []

[dependencies]
deepspeech =  { git = "https://github.com/RustAudio/deepspeech-rs", rev = "74f0ae7a33d52f90ec37325f0c1d8e0276c3fe7f" }
audrey = "0.2"
clap = "2.31.2"
log = "0.4.1"
simplelog = "0.5.2"
hyper = "0.12.1"
futures = "0.1.21"
bytes = "0.4.8"
byte-slice-cast = "0.2.0"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.19"
mkstemp-rs = "1.0.0"
